[gd_scene load_steps=16 format=2]

[ext_resource path="res://worldassets/materials/Door.tres" type="Material" id=1]
[ext_resource path="res://worldassets/materials/DoorHinge.tres" type="Material" id=2]
[ext_resource path="res://worldassets/materials/DoorR.tres" type="Material" id=3]
[ext_resource path="res://worldassets/Door.gd" type="Script" id=4]
[ext_resource path="res://worldassets/materials/generic_wall.tres" type="Material" id=5]
[ext_resource path="res://addons/SIsilicon.3d.text/Label3D.tscn" type="PackedScene" id=6]
[ext_resource path="res://worldassets/Button.tscn" type="PackedScene" id=7]
[ext_resource path="res://sounds/raw/332668__reitanna__big-thud2.wav" type="AudioStream" id=8]
[ext_resource path="res://sounds/hiss.wav" type="AudioStream" id=9]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.15263, 0.581233, 1 )

[sub_resource type="CylinderShape" id=2]
radius = 0.337065
height = 0.302667

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.151542, 0.419925, 0.374861 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 2, 1, 1 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0, 0, 0, 1 )
emission_enabled = true
emission = Color( 0, 0.0235294, 0.196078, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.282781, 1, 0.161135 )

[node name="Door" type="Spatial"]
script = ExtResource( 4 )

[node name="DoorL" type="CSGBox" parent="."]
transform = Transform( 0.9, 0, 0, 0, -3.93403e-08, -0.9, 0, 0.9, -3.93403e-08, 0, 0.831159, 0.529297 )
width = 0.3
height = 1.5
depth = 2.25
material = ExtResource( 1 )

[node name="CSGCylinder" type="CSGCylinder" parent="DoorL"]
transform = Transform( -4.37114e-08, 1, 0, 4.37114e-08, 1.91069e-15, 1, 1, 4.37114e-08, -4.37114e-08, 0.00153708, -0.414647, 0.000635922 )
operation = 1
radius = 0.37
height = 0.35
sides = 6
material = ExtResource( 2 )

[node name="DoorL2" type="CSGBox" parent="DoorL/CSGCylinder"]
transform = Transform( 1.91069e-15, -1, -4.37114e-08, -4.37114e-08, -4.37114e-08, 1, -1, 0, -4.37114e-08, 0, -0.00316882, 0.592255 )
width = 1.17524
depth = 0.35
material = ExtResource( 2 )

[node name="StaticBody" type="StaticBody" parent="DoorL"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape" type="CollisionShape" parent="DoorL/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.174176, -2.38419e-07 )
shape = SubResource( 1 )

[node name="CollisionShape2" type="CollisionShape" parent="DoorL/StaticBody"]
transform = Transform( -4.37114e-08, -1, 4.37114e-08, 1, -4.37113e-08, 4.37114e-08, -4.37114e-08, 4.37114e-08, 1, 0.00214881, -0.410099, 0 )
shape = SubResource( 2 )

[node name="DoorR" type="CSGBox" parent="."]
transform = Transform( 0.9, 0, 0, 0, -3.93403e-08, -0.9, 0, 0.9, -3.93403e-08, 0, 0.826282, -0.513509 )
width = 0.3
height = 1.5
depth = 2.25
material = ExtResource( 3 )

[node name="CSGCylinder2" type="CSGCylinder" parent="DoorR"]
transform = Transform( -4.37114e-08, 1, 0, 2.18557e-07, 9.55343e-15, 1, 1, 4.37114e-08, -2.18557e-07, 0.00153708, 0.744176, -0.00390476 )
operation = 2
radius = 0.37
height = 0.35
sides = 6
material = ExtResource( 2 )

[node name="DoorL2" type="CSGBox" parent="DoorR/CSGCylinder2"]
transform = Transform( 0, -1, -4.37114e-08, -4.37114e-08, -4.37114e-08, 1, -1, 0, -4.37114e-08, -5.96046e-08, -0.00316882, 0.592255 )
width = 1.17524
height = 2.44198
depth = 0.35
material = ExtResource( 2 )

[node name="StaticBody" type="StaticBody" parent="DoorR"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape" type="CollisionShape" parent="DoorR/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3286, 0.749207 )
shape = SubResource( 3 )

[node name="CollisionShape2" type="CollisionShape" parent="DoorR/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3286, -0.749207 )
shape = SubResource( 3 )

[node name="CollisionShape3" type="CollisionShape" parent="DoorR/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00328583, 0.00657231 )
shape = SubResource( 3 )

[node name="CollisionShape4" type="CollisionShape" parent="DoorR/StaticBody"]
transform = Transform( 1, 0, 0, 0, 0.862496, 0.506064, 0, -0.506064, 0.862496, 0, 0.193874, -0.489613 )
shape = SubResource( 3 )

[node name="CollisionShape5" type="CollisionShape" parent="DoorR/StaticBody"]
transform = Transform( 1, 0, 0, 0, 0.864634, -0.502401, 0, 0.502401, 0.864634, 0, 0.193874, 0.486328 )
shape = SubResource( 3 )

[node name="MotionDetector" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
collision_layer = 3
collision_mask = 3

[node name="CollisionShape" type="CollisionShape" parent="MotionDetector"]
shape = SubResource( 4 )

[node name="DoorFrame" type="Spatial" parent="."]

[node name="Wall" type="CSGBox" parent="DoorFrame"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
width = 0.437027
material = ExtResource( 5 )

[node name="Frame" type="CSGBox" parent="DoorFrame/Wall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.219751, 0 )
width = 0.563713
height = 1.75146
depth = 1.5223
material = ExtResource( 5 )

[node name="Way" type="CSGBox" parent="DoorFrame/Wall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.218903, 0 )
operation = 2
width = 0.645006
height = 1.58114
depth = 1.35839
material = ExtResource( 5 )

[node name="SignFrame" type="CSGBox" parent="DoorFrame/Wall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.816989, 0 )
width = 0.492743
height = 0.231442
depth = 1.52103
material = ExtResource( 5 )

[node name="SignFrameIndent" type="CSGBox" parent="DoorFrame/Wall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.816989, 0 )
operation = 2
width = 0.523398
height = 0.196598
depth = 1.47955
material = ExtResource( 5 )

[node name="SignScreen" type="CSGBox" parent="DoorFrame/Wall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.816989, 0 )
width = 0.430799
height = 0.196598
depth = 1.47955
material = SubResource( 5 )

[node name="StaticBody" type="StaticBody" parent="DoorFrame"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.993805, 0.840912 )

[node name="CollisionShape" type="CollisionShape" parent="DoorFrame/StaticBody"]
shape = SubResource( 6 )

[node name="StaticBody2" type="StaticBody" parent="DoorFrame"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.993805, -0.840912 )

[node name="CollisionShape" type="CollisionShape" parent="DoorFrame/StaticBody2"]
shape = SubResource( 6 )

[node name="StaticBody3" type="StaticBody" parent="DoorFrame"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.73815, 2.38419e-07 )

[node name="CollisionShape" type="CollisionShape" parent="DoorFrame/StaticBody3"]
shape = SubResource( 6 )

[node name="TextA" parent="." instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 1.06581e-14, -1, 0, 1, 1.06581e-14, 1, 4.6588e-22, -4.37114e-08, -0.216774, 1.80386, 0 )
text = "a"
text_size = 0.8

[node name="TextB" parent="." instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, -1.06581e-14, 1, 0, 1, 1.06581e-14, -1, 4.6588e-22, -4.37114e-08, 0.215623, 1.80386, 0 )
text = "b"
text_size = 0.8

[node name="ButtonB" parent="." instance=ExtResource( 7 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0.243415, 0.900323, -0.897817 )

[node name="ButtonA" parent="." instance=ExtResource( 7 )]
transform = Transform( 2.50343e-07, 0, -1, 0, 1, 0, 1, 0, 2.50343e-07, -0.243112, 0.900323, 0.870996 )

[node name="Tween" type="Tween" parent="."]

[node name="Hiss" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
stream = ExtResource( 9 )

[node name="Thud" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
stream = ExtResource( 8 )

[node name="SoundTimer" type="Timer" parent="."]
one_shot = true
[connection signal="body_exited" from="MotionDetector" to="." method="close_door"]
